added styling to button and email input

--- a/index.html
+++ b/index.html
@@ -12,24 +12,12 @@
         <p>Your daily dose of soccer stories from on and off the pitch. 
             Interviews,  breaking news and more!</p>
 
-            <input type="email" placeholder="ENTER YOUR EMAIL">
+            <input class="email-input" type="email" placeholder="ENTER YOUR EMAIL">
 
             <button>JOIN NOW</button>
 
-            <p>Read our <a href="" target="_blank">terms of service</a></p>
+            <p class="terms">Read our <a href="" target="_blank">terms of service</a></p>
         
     </body>
 </html>
 
-<!--
-THE DAILY DRIBBLE
-
-Your daily dose of soccer stories from on and off the pitch. 
-Interviews,  breaking news and more!
-
-ENTER YOUR EMAIL
-JOIN NOW
-
-Read our terms of service.
-
- -->
